# why-research

./: .clinerules  .cursorrules  .gitignore  .roorules  .windsurfrules  AGENTS.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  llms-full.txt  llms.txt  mcp.json  openapi.yaml  pyproject.toml  smithery.yaml
.agents/skills/research/: SKILL.md
.claude/commands/: brain.md  research-deep.md  research.md
.github/: copilot-instructions.md
.well-known/: agent.json  ai-plugin.json
agents/: openai.yaml
examples/: basic_research.py  feedback_loop.py
npx-wrapper/: package.json
skills/research/: SKILL.md
src/why/: __init__.py  a2a.py  api.py  brain.py  cli.py  display.py  engine.py  install_hooks.py  integrations.py  search.py  server.py
tests/: test_brain.py  test_engine.py
